added route related tests